spacing fix in main dashboard

--- a/src/App.css
+++ b/src/App.css
@@ -19,8 +19,8 @@
 
 .app-content {
     flex: 1;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 150px;
+    padding-right: 150px;
 }
 
 .navigation-bar-link {
